Make sure scrollbar is in attribute list when required

--- a/css/colours.css
+++ b/css/colours.css
@@ -1,3 +1,7 @@
+#menu {
+    color:#fff!important;
+    background-color:#000!important
+}
 .dark-grey-background {
     color:black;
     background:#aaa;
